# minimal-autosar-adaptive

./: .gitignore  CMakeLists.txt  README.md  execution_manager  log_demo
apps/: sensor_consumer.cpp  sensor_logic.hpp  sensor_provider  sensor_provider.cpp  someip_provider.cpp  speed_client.cpp  speed_logic.hpp
ara/com/: someip_adapter.cpp
ara/diag/: diag_server.cpp  diag_server.hpp
can_gateway/config/: can_example.json
can_gateway/include/: function_bus_api.hpp
can_gateway/src/: gateway.cpp  main.cpp
com/: someip_binding.cpp  someip_binding.hpp
diagnostics/config/: diag_example.json
diagnostics/provider/: generic_provider.cpp  generic_provider.hpp  ifunction_diag_provider.hpp
em/: Copyexecution_manager.cpp  execution_manager.cpp
include/ara/com/: core.hpp  someip_adapter.hpp
include/ara/core/: instance_specifier.hpp  result.hpp  speed_monitoring.hpp
include/ara/per/: file_storage.hpp  key_value_storage.hpp
include/ara/phm/: supervision_client.hpp
logging/include/: log.hpp  sinks_console.hpp  sinks_dlt.hpp
logging/src/: log.cpp  log_demo.cpp  sinks_console.cpp  sinks_dlt.cpp
manifests/: 01_sensor_provider.json  02_speed_client.json  persistency.json  sensor_provider.json
persistency/include/persistency/: key_value_storage_backend.hpp  storage_registry.hpp
persistency/src/: file_storage.cpp  key_value_storage_backend.cpp  key_value_storage_facade.cpp  storage_registry.cpp
phm/include/phm/: phm_ids.hpp  phm_supervisor.hpp
phm/src/: phm_supervisor.cpp  supervision_client.cpp
services/: services_description.hpp
stubs/: cloud_stub.cpp  position_stub.cpp  ui_stub.cpp
tests/: test_logging.cpp  test_persistency.cpp  test_phm_supervisor.cpp  test_sensor_logic.cpp  test_speed_logic.cpp
